--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -16,8 +16,10 @@
                 <li><a href="{{ page.url }}">{{ page.title }}</a></li>
                 {% endfor %}
             </ul>
+            <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br/>
             {% else %}
             <strong>No pages currently in category.</strong>
+            <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br/>
             {% endif %}
         {% else %}
                 The specified category does not exist.
