--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -8,7 +8,10 @@ Homepage
 {% block body_block %}
 <h1>Rango says...</h1>
 <div>
-    hey there partner! <br/>
+    {% if user.is_authenticated %} howdy {{ user.username }}!
+    {% else %}
+        hey there partner!
+    {% endif %} <br/>
     <strong>{{ boldmessage }}</strong>
 </div>
 
@@ -43,8 +46,6 @@ Homepage
 </div>
 
 <div>
-    <a href="{% url 'rango:about' %}">About</a><br />
-    <a href="{% url 'rango:add_category' %}">Add a New Category</a><br />
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 </div>
 {% endblock %}
