--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -13,6 +13,9 @@ About Rango
     <strong>This tutorial has been put together by Ching Laam Chan</strong><br />
 </div>
 <div>
+    Visits: {{ visits }}
+</div>
+<div>
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
     <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
 </div>
